--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Resume</title>
+  <link rel="icon" type="image/jpg" href="resume icon.jpg">
 </head>
 
 <body bgcolor="#edf4f2">
